--- a/oauth/jinja2/detail.html
+++ b/oauth/jinja2/detail.html
@@ -3,11 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <style type = "text/css">
-        body{color:red}
-    </style>
 </head>
 <body>
-    now:{{username}}
+jinja2 oauth模板
 </body>
 </html>
